RESOLVED FIXED291212
Crash in TimerBase::stopSlowCase() via DNSResolveQueueCFNet::performDNSLookup
https://bugs.webkit.org/show_bug.cgi?id=291212
Summary Crash in TimerBase::stopSlowCase() via DNSResolveQueueCFNet::performDNSLookup
Ryosuke Niwa
Reported 2025-04-07 11:42:43 PDT
e.g. 0 WebCore 0x1a7f61510 WTFCrashWithInfo(int, char const*, char const*, int) + 24 (usr/local/include/wtf/Assertions.h:920) [inlined] 1 WebCore 0x1a7f61510 WebCore::TimerBase::setNextFireTime(WTF::MonotonicTime) + 44 (WebCore/platform/Timer.cpp:525) [inlined] 2 WebCore 0x1a7f61510 WebCore::TimerBase::stopSlowCase() + 252 (WebCore/platform/Timer.cpp:327) 3 WebCore 0x1a7f614e8 WebThreadIsLockedOrDisabledInMainOrWebThread + 4 (WebCore/platform/ios/wak/WebCoreThread.mm:897) [inlined] 4 WebCore 0x1a7f614e8 WebCore::TimerBase::setNextFireTime(WTF::MonotonicTime) + 4 (WebCore/platform/Timer.cpp:525) [inlined] 5 WebCore 0x1a7f614e8 WebCore::TimerBase::stopSlowCase() + 212 (WebCore/platform/Timer.cpp:327) 6 WebCore 0x1aa7b94b4 WebCore::TimerBase::stop() + 20 (WebCore/platform/Timer.h:207) [inlined] 7 WebCore 0x1aa7b94b4 WebCore::DNSResolveQueueCFNet::performDNSLookup(WTF::String const&, WTF::Ref<WebCore::DNSResolveQueueCFNet::CompletionHandlerWrapper, WTF::RawPtrTraits<WebCore::DNSResolveQueueCFNet::CompletionHandlerWrapper>, WTF::DefaultRefDerefTraits<WebCore::DNSResolveQueueCFNet::CompletionHandlerWrapper>>&&)::$_1::operator()(nw_resolver_status_t, nw_array*)::&#39;lambda&#39;(std::experimental::fundamentals_v3::expected<WTF::Vector<WebCore::IPAddress, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>, WebCore::DNSError>&&)::operator()(std::experimental::fundamentals_v3::expected<WTF::Vector<WebCore::IPAddress, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>, WebCore::DNSError>&&) + 20 (WebCore/platform/network/cf/DNSResolveQueueCFNet.cpp:135) [inlined] 8 WebCore 0x1aa7b94b4 WebCore::DNSResolveQueueCFNet::performDNSLookup(WTF::String const&, WTF::Ref<WebCore::DNSResolveQueueCFNet::CompletionHandlerWrapper, WTF::RawPtrTraits<WebCore::DNSResolveQueueCFNet::CompletionHandlerWrapper>, WTF::DefaultRefDerefTraits<WebCore::DNSResolveQueueCFNet::CompletionHandlerWrapper>>&&)::$_1::operator()(nw_resolver_status_t, nw_array*) + 524 (WebCore/platform/network/cf/DNSResolveQueueCFNet.cpp:157) [inlined] <rdar://147916278>
Attachments
Ryosuke Niwa
Comment 1 2025-04-07 11:53:11 PDT
EWS
Comment 2 2025-04-08 08:11:25 PDT
Committed 293419@main (59247a7628dd): <https://commits.webkit.org/293419@main> Reviewed commits have been landed. Closing PR #43754 and removing active labels.
EWS
Comment 3 2025-04-22 08:36:21 PDT
Committed 289651.455@safari-7621-branch (6223bf2e7b8c): <https://commits.webkit.org/289651.455@safari-7621-branch> Reviewed commits have been landed. Closing PR #3028 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.