Crash in TimerBase::stopSlowCase() via DNSResolveQueueCFNet::performDNSLookup https://bugs.webkit.org/show_bug.cgi?id=291212

Reviewed by Chris Dumez.

The crash appears to be caused by DNSResolveQueueCFNet::performDNSLookup updating WebCore timer
without grabbing WebThread lock. Speculatively fixed the crash by grabbing WebThread lock.

* Source/WebCore/platform/network/cf/DNSResolveQueueCFNet.cpp:
(WebCore::DNSResolveQueueCFNet::performDNSLookup):

Canonical link: https://commits.webkit.org/293419@main