Source/WebCore/platform/network/cf/DNSResolveQueueCFNet.cpp
@@ -131,6 +131,10 @@ void DNSResolveQueueCFNet::performDNSLookup(const String& hostname, Ref<Completi
         if (status != nw_resolver_status_complete)
             return;
 
+#if PLATFORM(IOS_FAMILY)
+        WebThreadLock();
+#endif
+
         auto callCompletionHandler = [resolver = WTFMove(resolver), completionHandler = WTFMove(completionHandler), timeoutTimer = WTFMove(timeoutTimer)](DNSAddressesOrError&& result) mutable {
             timeoutTimer->stop();
             completionHandler->complete(WTFMove(result));
